--- a/build.xml
+++ b/build.xml
@@ -14,10 +14,10 @@
   <!-- <property name="version" value=""/> -->
 
   <!-- By default the system team number is used -->
-  <!-- <property name="team-number" value=""/> -->
+  <property name="team-number" value="2877"/>
 
   <!-- By default the target is set to 10.TE.AM.2 -->
-  <!-- <property name="target" value=""/> -->
+  <property name="target" value="10.28.77.2"/>
 
   <!-- Any other property in build.properties can also be overridden. -->
   
