Updates to build in 2017 FRC environment.
Note -- build machine will need navx_frc libraries, either from source
(https://github.com/kauailabs/navxmxp) or binary, and NavXP libraries:
http://www.ctr-electronics.com/hro.html#product_tabs_technical_resources
(hint: download the No Installer package).

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>DriveRobot</name>
 	<comment></comment>
 	<projects>
+		<project>navx_frc</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
